--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,14 @@ html{
   height: 0;
   width: 0;
 }
+
+*{
+  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Black Ops One';
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  border:none;
+  text-decoration: none;
+}
