--- a/client/src/Components/Home/Genre/Genre.css
+++ b/client/src/Components/Home/Genre/Genre.css
@@ -1,10 +1,8 @@
-/* Container and Header */
 .container_gen {
     background-image: url("../../../assets/bg-gen.png");
-    /* Replace with actual path */
     background-size: cover;
     background-position: center;
-    padding: 2rem;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,16 +17,14 @@
     margin-bottom: 2rem;
 }
 
-/* Card Layout */
 .card {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
-    width: 90%;
+    width: 62vw;
     justify-items: center;
 }
 
-/* Genre Cards */
 .genre {
     position: relative;
     display: flex;
@@ -54,17 +50,14 @@
     text-align: center;
     font-size: 1.5rem;
     color: #fff;
-    text-transform: uppercase;
     font-weight: bold;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
 }
 
-/* Hover Effect */
 .genre:hover {
     transform: scale(1.05);
 }
 
-/* Individual Genres (Colors) */
 .action {
     background: linear-gradient(to right, #0cbabf, transparent);
 }
@@ -156,7 +149,6 @@
     color: #fff;
 }
 
-/* Responsive Design */
 @media (max-width: 1024px) {
     .card {
         grid-template-columns: repeat(2, 1fr);
