Add token validation and logout functionality in Navbar

--- a/client/src/Components/Home/Navbar/navbar.css
+++ b/client/src/Components/Home/Navbar/navbar.css
@@ -149,3 +149,8 @@ html{
     position: relative;
     display: none;
 }
+
+.custom-popup {
+    width: 20vw !important;
+    height: 6rem !important; /* Adjust height */
+}
