--- a/client/src/Components/Profile/profile.css
+++ b/client/src/Components/Profile/profile.css
@@ -22,7 +22,9 @@
   gap: 2%;
 }
 
-
+h1{
+  margin-top: 3%;
+}
 
 .played {
   display: flex;
@@ -40,7 +42,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: #201c1b73;
+  background-color: #201c1ba3;
   margin-top: 2%;
 }
 
@@ -50,7 +52,7 @@
   height: 100vh;
   width: 100vw;
   /* background-color: #201c1b73; */
-  background-color: #d0c4c173;
+  background-color: #201c1ba3;
   margin-top: 2%;
   margin-right: 2%;
   margin-bottom: 2%;
