Refactor Intro component to handle skip functionality.

--- a/client/src/Components/Intro/Intro.css
+++ b/client/src/Components/Intro/Intro.css
@@ -2,3 +2,15 @@
     max-height: 485px;
     overflow: hidden;
 }
+
+.skip-text {
+  position: absolute;
+  bottom: 40px;
+  width: 90%;
+  display: flex;
+  justify-content: end;
+  color: white;
+  font-size: 13px;
+  font-family: sans-serif;
+  margin-left: 5%;
+}
